# Contacts_web

./: .env_example  HW10.02.ipynb  HW10.2.ipynb  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/source/: conf.py  index.rst
migrations/versions/: 7fd55df97d68_init.py
src/conf/: config.py  messages.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  test.py
src/services/templates/: example_email.html
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
